adição das imagens e fontes

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: 'Verdana', 'Geneva', 'Tahoma', 'sans-serif';
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
+
 * {
     padding: 0px;
     margin: 0px;
@@ -9,6 +20,7 @@ html, body {
 
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 
 }
 
@@ -23,6 +35,8 @@ header > h1 {
 
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 
 }
 
@@ -49,6 +63,13 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 2.5vw;
+}
+
+section > p {
+
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -62,12 +83,32 @@ section.imagem {
 
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.514);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
 
-    background-color: rgba(0, 0, 0, 0.315);
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.486);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 0px black;
+
+}
+
+section#img01 {
+
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+
+}
+
+section#img02 {
+
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
+
 }
 
 footer {
